fixed nav visibility issue

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -67,24 +67,22 @@ section h3.title {
 
 /* -------------------Screen Wipe-------------------------- */
 
-.screen-wipe-top {
+.screen-wipe-top{
 	width: 100%;
 	height: 100vh;
-	background: rgb(0, 0, 0);
+	background:rgb(0, 0, 0);
 	position: fixed;
 	z-index: 1000;
 	top: -100%;
 }
-
-.screen-wipe-bottom {
+.screen-wipe-bottom{
 	width: 100%;
 	height: 100vh;
-	background: rgb(0, 0, 0);
+	background:rgb(0, 0, 0);
 	position: fixed;
 	z-index: 1000;
 	bottom: -100%;
 }
-
 /*Header Styles*/
 
 .header-home {
@@ -120,7 +118,7 @@ section h3.title {
 	transition: .5s ease-in-out;
 	cursor: pointer;
 	margin-top: 7px;
-	z-index: 15000;
+	z-index: 5;
 }
 
 .nav-icon span {
@@ -187,8 +185,7 @@ section h3.title {
 	visibility: hidden;
 	opacity: 0;
 	transform: scale(0);
-	visibility: 0s 0.3s,
-		opacity 0.3s 0s;
+	visibility: 0s 0.3s, opacity 0.3s 0s;
 	transition: transform 0.3s 0s, visibility 0s 0.3s, opacity 0.3s 0s;
 }
 
